// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composeQuery 1`] = `"?key1=value1&key2=value2"`;

exports[`getStatusProcess EVENT 1`] = `""`;

exports[`getStatusProcess PRICE 1`] = `"PRICE_AWS_PUBLIC_HOURLY"`;

exports[`getStatusProcess PRICE 2`] = `"PRICE_AWS_PUBLIC"`;

exports[`getStatusProcess TRADES 1`] = `"TRADE_AZURE_PUBLIC_SOURCE"`;

exports[`getStatusProcess cleanDB do not useDynamo 1`] = `"CLEANDB_AWS_PRIVATE"`;

exports[`getStatusProcess cleanDB useDynamo 1`] = `"CLEANDB_AWS_PUBLIC"`;

exports[`getStatusProcess commit do not useDynamo 1`] = `"FEED_AWS_PRIVATE"`;

exports[`getStatusProcess commit useDynamo 1`] = `"FEED_AWS_PUBLIC"`;

exports[`getStatusProcess events do not useDynamo 1`] = `"EVENT_AWS_PRIVATE"`;

exports[`getStatusProcess events useDynamo 1`] = `"EVENT_AWS_PUBLIC_OTHERS"`;

exports[`getStatusProcess fetchPrice do not useDynamo 1`] = `"FETCH_AWS_PRIVATE"`;

exports[`getStatusProcess fetchPrice useDynamo 1`] = `"FETCH_AWS_PUBLIC"`;

exports[`getStatusProcess prices do not useDynamo 1`] = `"PRICE_AWS_PRIVATE_MINUTELY"`;

exports[`getStatusProcess prices useDynamo 1`] = `"PRICE_AWS_PUBLIC_MINUTELY"`;

exports[`getStatusProcess round do not useDynamo 1`] = `"ROUND_AWS_PRIVATE"`;

exports[`getStatusProcess round useDynamo 1`] = `"ROUND_AWS_PUBLIC"`;

exports[`getStatusProcess trades do not useDynamo 1`] = `"TRADE_AWS_PRIVATE"`;

exports[`getStatusProcess trades useDynamo 1`] = `"TRADE_AWS_PUBLIC"`;

exports[`log debug 1`] = `
Array [
  Array [
    "15 06:56:07.890 [ERROR]: error",
  ],
  Array [
    "15 06:56:07.890 [INFO]: info",
  ],
  Array [
    "15 06:56:07.890 [DEBUG]: debug",
  ],
]
`;

exports[`log error 1`] = `
Array [
  Array [
    "15 06:56:07.890 [ERROR]: error",
  ],
]
`;

exports[`log info 1`] = `
Array [
  Array [
    "15 06:56:07.890 [ERROR]: error",
  ],
  Array [
    "15 06:56:07.890 [INFO]: info",
  ],
]
`;

exports[`parseOptions 1`] = `
Object {
  "assets": Array [
    "quote",
    "base",
  ],
  "aws": false,
  "azure": false,
  "contractType": "contractType",
  "dbLive": false,
  "dynamo": false,
  "event": "event",
  "events": Array [
    "event1",
    "event2",
  ],
  "exSources": Array [
    "ex1",
    "ex2",
  ],
  "force": false,
  "forceREST": false,
  "gcp": false,
  "live": false,
  "pair": "pair",
  "pairs": Array [
    "pair1",
    "pair2",
  ],
  "period": 10,
  "provider": "provider",
  "server": false,
  "source": "source",
  "sources": Array [
    "s1",
    "s2",
  ],
  "tenor": "tenor",
}
`;

exports[`parseOptions default 1`] = `
Object {
  "assets": Array [
    "",
  ],
  "aws": false,
  "azure": false,
  "contractType": "Beethoven",
  "dbLive": false,
  "dynamo": false,
  "event": "",
  "events": Array [
    "",
  ],
  "exSources": Array [
    "",
  ],
  "force": false,
  "forceREST": false,
  "gcp": false,
  "live": false,
  "pair": "",
  "pairs": Array [
    "",
  ],
  "period": 1,
  "provider": "",
  "server": false,
  "source": "",
  "sources": Array [
    "",
  ],
  "tenor": "Perpetual",
}
`;

exports[`sleep 1`] = `
Array [
  Array [
    [Function],
    1,
  ],
]
`;
